fix bid button text wrap

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1402,14 +1402,19 @@ img
 			margin-bottom 0
 			margin-left 0
 		.btn
+			flex-wrap wrap
 			width 100%
 			height 72px
 			font-size 2rem
 			text-align center
 			border-radius (@height / 2)
-			@media $640
+			@media $480
 				width auto
 				padding 0 48px
+			span
+				display block
+				@media $480
+					display inline
 .homepage-pluses
 	background-image url('../i/homepage-pluses-bg.jpg')
 	padding 42px 0
